--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <div id="resultat"></div>
     </div>
     <!--  -->
+    <h1>Jeu de Memorie</h1>
+
+    <div class="container">
+        <div id="resultat2"></div>
+    </div>
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
